--- a/Nagyhazi.vcxproj.filters
+++ b/Nagyhazi.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Network\NetworkSolverGen.cpp">
       <Filter>Source Files\Network</Filter>
     </ClCompile>
+    <ClCompile Include="Network\NetworkSolverTwoport.cpp">
+      <Filter>Source Files\Network</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fmt\core.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files\Network</Filter>
     </ClInclude>
     <ClInclude Include="Network\NetworkSolverGen.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Network\NetworkSolverTwoport.h">
       <Filter>Header Files\Network</Filter>
     </ClInclude>
   </ItemGroup>
