--- a/Nagyhazi.vcxproj.filters
+++ b/Nagyhazi.vcxproj.filters
@@ -28,14 +28,14 @@
     <Filter Include="Header Files\Network">
       <UniqueIdentifier>{10335c8f-dea5-4778-8fa4-caa0c2cf3a28}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\OnePort">
-      <UniqueIdentifier>{b127c2af-1a8b-46d0-b326-fb375fe52614}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\OnePort">
-      <UniqueIdentifier>{66036b0e-32c0-4375-a257-a3c7095bf36d}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Network">
       <UniqueIdentifier>{b14fd0af-263c-405a-8be6-d21d698e269a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Device">
+      <UniqueIdentifier>{66036b0e-32c0-4375-a257-a3c7095bf36d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Device">
+      <UniqueIdentifier>{b127c2af-1a8b-46d0-b326-fb375fe52614}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -58,16 +58,16 @@
       <Filter>Source Files\fmt</Filter>
     </ClCompile>
     <ClCompile Include="OnePort\CurrentSource.cpp">
-      <Filter>Source Files\OnePort</Filter>
+      <Filter>Source Files\Device</Filter>
     </ClCompile>
     <ClCompile Include="OnePort\IOnePort.cpp">
-      <Filter>Source Files\OnePort</Filter>
+      <Filter>Source Files\Device</Filter>
     </ClCompile>
     <ClCompile Include="OnePort\Resistor.cpp">
-      <Filter>Source Files\OnePort</Filter>
+      <Filter>Source Files\Device</Filter>
     </ClCompile>
     <ClCompile Include="OnePort\VoltageSource.cpp">
-      <Filter>Source Files\OnePort</Filter>
+      <Filter>Source Files\Device</Filter>
     </ClCompile>
     <ClCompile Include="Network\Network.cpp">
       <Filter>Source Files\Network</Filter>
@@ -83,6 +83,12 @@
     </ClCompile>
     <ClCompile Include="Network\NetworkSolverTwoport.cpp">
       <Filter>Source Files\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="OnePort\Wire.cpp">
+      <Filter>Source Files\Device</Filter>
+    </ClCompile>
+    <ClCompile Include="OnePort\Probe.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -111,16 +117,16 @@
       <Filter>Header Files\Network</Filter>
     </ClInclude>
     <ClInclude Include="OnePort\CurrentSource.h">
-      <Filter>Header Files\OnePort</Filter>
+      <Filter>Header Files\Device</Filter>
     </ClInclude>
     <ClInclude Include="OnePort\IOnePort.h">
-      <Filter>Header Files\OnePort</Filter>
+      <Filter>Header Files\Device</Filter>
     </ClInclude>
     <ClInclude Include="OnePort\Resistor.h">
-      <Filter>Header Files\OnePort</Filter>
+      <Filter>Header Files\Device</Filter>
     </ClInclude>
     <ClInclude Include="OnePort\VoltageSource.h">
-      <Filter>Header Files\OnePort</Filter>
+      <Filter>Header Files\Device</Filter>
     </ClInclude>
     <ClInclude Include="Network\INetworkSolver.h">
       <Filter>Header Files\Network</Filter>
@@ -133,6 +139,12 @@
     </ClInclude>
     <ClInclude Include="Network\NetworkSolverTwoport.h">
       <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="OnePort\Wire.h">
+      <Filter>Header Files\Device</Filter>
+    </ClInclude>
+    <ClInclude Include="OnePort\Probe.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
