--- a/Nagyhazi.vcxproj.filters
+++ b/Nagyhazi.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="Network\loadNetwork.cpp">
       <Filter>Source Files\Network</Filter>
     </ClCompile>
+    <ClCompile Include="Network\graphFunctions.cpp">
+      <Filter>Source Files\Network</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fmt\core.h">
@@ -160,6 +163,9 @@
     </ClInclude>
     <ClInclude Include="Network\Solvers\solvers.h">
       <Filter>Header Files\Network\Solver</Filter>
+    </ClInclude>
+    <ClInclude Include="Network\graphFunctions.h">
+      <Filter>Header Files\Network</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
