update project files

--- a/Nagyhazi.vcxproj
+++ b/Nagyhazi.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Device\CurrentSource.cpp" />
     <ClCompile Include="Device\ICoupledDevice.cpp" />
     <ClCompile Include="Device\IDevice.cpp" />
+    <ClCompile Include="Device\Nullator.cpp" />
     <ClCompile Include="Device\Probe.cpp" />
     <ClCompile Include="Device\Resistor.cpp" />
     <ClCompile Include="Device\VCCS.cpp" />
@@ -152,13 +153,16 @@
     <ClCompile Include="Device\Wire.cpp" />
     <ClCompile Include="fmt\format.cc" />
     <ClCompile Include="LinMath\DimensionException.cpp" />
-    <ClCompile Include="LinMath\LinearEquationSystem.cpp" />
+    <ClCompile Include="LinMath\InvertException.cpp" />
     <ClCompile Include="LinMath\Matrix.cpp" />
     <ClCompile Include="Nagyhazi.cpp" />
     <ClCompile Include="Network\graphFunctions.cpp" />
     <ClCompile Include="Network\INetworkSolver.cpp" />
+    <ClCompile Include="Network\LoadException.cpp" />
     <ClCompile Include="Network\loadNetwork.cpp" />
     <ClCompile Include="Network\Network.cpp" />
+    <ClCompile Include="Network\SolveException.cpp" />
+    <ClCompile Include="Network\Solver\EquationSystemSolver.cpp" />
     <ClCompile Include="Network\Solver\NetworkSolverDC.cpp" />
     <ClCompile Include="Network\Solver\NetworkSolverGen.cpp" />
     <ClCompile Include="Network\Solver\NetworkSolverTwoport.cpp" />
@@ -170,6 +174,7 @@
     <ClInclude Include="Device\devices.h" />
     <ClInclude Include="Device\ICoupledDevice.h" />
     <ClInclude Include="Device\IDevice.h" />
+    <ClInclude Include="Device\Nullator.h" />
     <ClInclude Include="Device\Probe.h" />
     <ClInclude Include="Device\Resistor.h" />
     <ClInclude Include="Device\VCCS.h" />
@@ -180,11 +185,16 @@
     <ClInclude Include="fmt\format-inl.h" />
     <ClInclude Include="fmt\format.h" />
     <ClInclude Include="LinMath\DimensionException.h" />
-    <ClInclude Include="LinMath\LinearEquationSystem.h" />
+    <ClInclude Include="LinMath\InvertException.h" />
+    <ClInclude Include="LinMath\math.h" />
     <ClInclude Include="LinMath\Matrix.h" />
     <ClInclude Include="Network\graphFunctions.h" />
     <ClInclude Include="Network\INetworkSolver.h" />
+    <ClInclude Include="Network\LoadException.h" />
+    <ClInclude Include="Network\net.h" />
     <ClInclude Include="Network\Network.h" />
+    <ClInclude Include="Network\SolveException.h" />
+    <ClInclude Include="Network\Solver\EquationSystemSolver.h" />
     <ClInclude Include="Network\Solver\NetworkSolverDC.h" />
     <ClInclude Include="Network\Solver\NetworkSolverGen.h" />
     <ClInclude Include="Network\Solver\NetworkSolverTwoport.h" />
