--- a/Nagyhazi.vcxproj.filters
+++ b/Nagyhazi.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="Nagyhazi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LinMath\LinearEquationSystem.cpp">
-      <Filter>Source Files\LinMath</Filter>
-    </ClCompile>
     <ClCompile Include="LinMath\Matrix.cpp">
       <Filter>Source Files\LinMath</Filter>
     </ClCompile>
@@ -114,6 +111,21 @@
     <ClCompile Include="Device\VCCS.cpp">
       <Filter>Source Files\Device</Filter>
     </ClCompile>
+    <ClCompile Include="Device\Nullator.cpp">
+      <Filter>Source Files\Device</Filter>
+    </ClCompile>
+    <ClCompile Include="Network\Solver\EquationSystemSolver.cpp">
+      <Filter>Source Files\Network\Solver</Filter>
+    </ClCompile>
+    <ClCompile Include="LinMath\InvertException.cpp">
+      <Filter>Source Files\LinMath</Filter>
+    </ClCompile>
+    <ClCompile Include="Network\LoadException.cpp">
+      <Filter>Source Files\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="Network\SolveException.cpp">
+      <Filter>Source Files\Network</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fmt\core.h">
@@ -124,9 +136,6 @@
     </ClInclude>
     <ClInclude Include="fmt\format-inl.h">
       <Filter>Header Files\fmt</Filter>
-    </ClInclude>
-    <ClInclude Include="LinMath\LinearEquationSystem.h">
-      <Filter>Header Files\LinMath</Filter>
     </ClInclude>
     <ClInclude Include="LinMath\Matrix.h">
       <Filter>Header Files\LinMath</Filter>
@@ -190,6 +199,27 @@
     </ClInclude>
     <ClInclude Include="Device\VCCS.h">
       <Filter>Header Files\Device</Filter>
+    </ClInclude>
+    <ClInclude Include="Device\Nullator.h">
+      <Filter>Header Files\Device</Filter>
+    </ClInclude>
+    <ClInclude Include="Network\Solver\EquationSystemSolver.h">
+      <Filter>Header Files\Network\Solver</Filter>
+    </ClInclude>
+    <ClInclude Include="LinMath\InvertException.h">
+      <Filter>Header Files\LinMath</Filter>
+    </ClInclude>
+    <ClInclude Include="LinMath\math.h">
+      <Filter>Header Files\LinMath</Filter>
+    </ClInclude>
+    <ClInclude Include="Network\SolveException.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Network\net.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Network\LoadException.h">
+      <Filter>Header Files\Network</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
