--- a/Nagyhazi.vcxproj.filters
+++ b/Nagyhazi.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="Network\SolveException.cpp">
       <Filter>Source Files\Network</Filter>
     </ClCompile>
+    <ClCompile Include="Network\Solver\NetworkSolverResistance.cpp">
+      <Filter>Source Files\Network\Solver</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fmt\core.h">
@@ -220,6 +223,9 @@
     </ClInclude>
     <ClInclude Include="Network\LoadException.h">
       <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Network\Solver\NetworkSolverResistance.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
