update documentation generation

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,12 +13,12 @@ jobs:
     - name: Generate documentation 
       uses: mattnotmitt/doxygen-action@v1
       with:
-        doxyfile-path: 'analyzer/Doxyfile'
+        working-directory: 'analyzer'
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: git@github.com:sasszem/s502.git
         BRANCH: gh-pages
-        FOLDER: html
+        FOLDER: analyzer/docs/html
         SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
         MESSAGE: "Update from {sha}\nOriginal message:\n{msg}"
