--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
-        REPO: git@github.com:sasszem/s502.git
+        REPO: git@github.com:sasszem/jelek.git
         BRANCH: gh-pages
         FOLDER: analyzer/docs/html
         SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
